build(java-version): Set java compile version to 11
 These changes remove the old java 8 compile version, set it to 11 and migrate old API usages.. Since maven < 3 is not compatible with Java 11, maven 3.6 is now enforced. This is the latest available version in the ubuntu repositories.